# CMakeList.txt : CMake project for CSES, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CSES")

# Add source to this project's executable.
add_executable (CSES "CSES.cpp" "CSES.h" "main.cpp")

# TODO: Add tests and install targets if needed.
